--- a/LAF.Cadastros/src/LAF.Cadastros.IoC/LAF.Cadastros.IoC.csproj
+++ b/LAF.Cadastros/src/LAF.Cadastros.IoC/LAF.Cadastros.IoC.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\LAF.Cadastros.Application\LAF.Cadastros.Application.csproj" />
     <ProjectReference Include="..\LAF.Cadastros.Domain\LAF.Cadastros.Domain.csproj" />
     <ProjectReference Include="..\LAF.Cadastros.Repository\LAF.Cadastros.Repository.csproj" />
